# termare_view

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-EN.md  README.md  Support_Sequences.md  analysis_options.yaml  apt_install_out.txt  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
c_resource/NiTerm/android/: CMakeLists.txt  build_android
c_resource/NiTerm/android/cmd/: android.sh
c_resource/NiTerm/src/: test.c
example/: .metadata  README.md  pubspec.yaml
example/lib/: float_view.dart  home_page.dart  input_listener.dart  main.dart  ssh.dart  termare.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
ios/: termare.podspec
ios/Classes/: SwiftTermarePlugin.swift  TermarePlugin.h
lib/: termare.dart  termare_view.dart
lib/src/: combining_characters.dart  custom_utf.dart  envirpath.dart  observable.dart  term_size.dart  termare_controller.dart  termare_pty.dart  termare_view.dart  test.dart
termare_pty/: README.md  pubspec.yaml
termare_pty/lib/: main.dart  termare_pty.dart
termare_pty/test/: widget_test.dart
termare_ssh/: .flutter-plugins  .flutter-plugins-dependencies  README.md  analysis_options.yaml  pubspec.yaml
termare_ssh/android/: local.properties
termare_ssh/lib/: config.dart  main.dart  ssh.dart  termare_ssh.dart
termare_ssh/test/: widget_test.dart
termare_ssh/web/: index.html  manifest.json
test/: a.py  csi_p.sh  loop_buffer_text.dart  progress.sh  termare_test.dart  termare_view_test.dart  test.dart  test.py  test.sh  test_raw_term.dart
(+85 files in other folders)
